RESOLVED FIXED30807
Crash occurs after launching Newsfire 1.6 for the first time
https://bugs.webkit.org/show_bug.cgi?id=30807
Summary Crash occurs after launching Newsfire 1.6 for the first time
Oliver Hunt
Reported 2009-10-26 23:50:55 PDT
ObjcBindings crash, seems to be error interacting with libauto.
Attachments
Patch v1 (1.73 KB, patch)
2009-10-26 23:53 PDT, Oliver Hunt
eric: review-
Oliver Hunt
Comment 1 2009-10-26 23:53:05 PDT
Created attachment 41932 [details] Patch v1
Maciej Stachowiak
Comment 2 2009-10-26 23:54:48 PDT
Comment on attachment 41932 [details] Patch v1 r=me
Eric Seidel (no email)
Comment 3 2009-10-27 02:08:52 PDT
Rolled out in: Committed r50133: <http://trac.webkit.org/changeset/50133> It caused a whole bunch of layout tests to crash.
mitz
Comment 4 2009-10-27 07:13:03 PDT
Eric Seidel (no email)
Comment 5 2009-10-27 14:41:38 PDT
Comment on attachment 41932 [details] Patch v1 This was landed and then rolled out, so marking r-.
Oliver Hunt
Comment 6 2009-10-27 18:27:01 PDT
Committed r50191
Note You need to log in before you can comment on or make changes to this bug.