Crash occurs after launching Newsfire 1.6 for the first time https://bugs.webkit.org/show_bug.cgi?id=30807

Reviewed by Maciej Stachowiak.

Use a RetainPtr in ObjcBinding to ensure that we adequately
protect the autorelease pool from GC in GC'd applications.

Canonical link: https://commits.webkit.org/41576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50131 268f45cc-cd09-0410-ab3c-d52691b4dbfc